--- a/Chat/.classpath
+++ b/Chat/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="C:/Users/Kevin/Desktop/chat/kryonet-1.04-all.jar"/>
+	<classpathentry kind="lib" path="C:/Jars/kryonet-1.04-all.jar"/>
+	<classpathentry kind="lib" path="C:/Jars/postgresql-9.3-1102.jdbc3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
